Hourly Plan Alignment Issue fixed

--- a/styles/subscription.css
+++ b/styles/subscription.css
@@ -1129,12 +1129,12 @@
       flex-direction:column;
       justify-content:center;
       overflow:hidden;
-      
+            
   }
 
   #sub-swiper{
     width: 100%;
-    height: 100%;
+    height: 100%; 
   }
 
   .hidden{
@@ -1163,7 +1163,7 @@
       padding:20px 0px;
       margin-top:50px !important;
       margin-bottom:50px !important;
-      
+          
   }
   .swiper-slide-monthly{
     height:585px !important;
@@ -1178,7 +1178,9 @@
   .swiper-slide-shadow-right {
     display: none;
   }
-
+  #section-trial{
+    margin:0 15%;
+  }
   /* tablet */
   @media(max-width:1025px){
     .labels{
@@ -1218,6 +1220,15 @@
     .marginTop-5 {
         margin-top: -15px ;
     }
+    #swiper-wrapper-trial{
+        display:flex;
+        justify-content: center;
+        align-items:center;
+       
+      }
+      #section-trial{
+        margin:0 !important;
+      }
    
   }
 
@@ -1271,7 +1282,12 @@ width:85vw !important;
 .marginTop-5 {
     margin-top: -2px ;
 }
-
+#swiper-wrapper-trial{
+    margin:0 !important;
+  }
+#section-trial{
+    margin:0 !important;
+  }
 }
 
 
@@ -1429,7 +1445,7 @@ width:85vw !important;
       display: none;
     }
 
-    
+
   }
 
   /* For larger screens */
